src/ListPlayer.css
@keyframes fadeIn {
  0% { opacity: 0; }
  50% { opacity: 0; }
  100% { opacity: 1; }
}

.list-player a:hover {
  text-decoration: underline;
  text-decoration-style: solid;
  text-underline-offset: 2px;
}

/* LISTPLAYER ----------------- */
.list-player {
  display: flex;
  flex-direction: column;
  gap: 0;
  width: inherit;
  min-width: 315px;
  max-width: 100%;
  min-height: 92px;
  max-height: 100%;
  overflow: hidden;
  background-color: rgb(0 0 0 / 0.25);
  border-radius: 0.5rem;
  transition-property: max-height, max-width;
  transition-duration: 0.5s;
  transition-timing-function: ease-in-out;
}

.list-header {
  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  position: relative;
  width: 100%;
  min-height: 5.75rem;
  background-color: rgba(255, 255, 255, 0.1);
  overflow: hidden;
  transition-property: max-height, height;
  transition-duration: 0.5s;
  transition-timing-function: ease-in-out;
}

.list-body {
  display: flex;
  flex: 1 1 0%;
  flex-direction: column;
  gap: 0;
  overflow-y: auto;
  padding-top: 0.65rem;
  padding-bottom: 0.3rem;
  margin-top: 0;
  margin-bottom: var(--lp-pad-1);
  margin-right: var(--lp-pad-1);
  margin-left: var(--lp-pad-2);
  container-type: inline-size;
  container-name: list;
}

.list-body:first-child {
  padding-top: 0.3rem;
  margin-top: var(--lp-pad-1);
}

div.track {
  display: flex;
  flex-direction: row;
  align-items: center;
  align-self: flex-start;
  width: calc(100% - 0.3rem);
  padding-top: 5px;
  padding-bottom: 7px;
  margin-right: 0.3rem;
  border-radius: 0.4rem;
}

div.track:hover, div.track.selected {
  background-color: rgb(0 0 0 / 0.05);
}

div.track:hover .list-number {
  display: none;
}

div.track:hover .action-icon {
  display: unset;
}

.action-icon:hover {
  cursor: pointer;
}

span.number {
  font-size: large;
  font-weight: 600;
  opacity: var(--lp-text-op-2);
}

div.track-number {
  display: flex;
  justify-content: center;
  min-width: 2rem;
}

div.track-number .action-icon {
  display: none;
  margin-left: 4px;
  width: 1.25rem;
  height: 1.25rem;
}

/* .text {

}

.list-number {

} */

.info-cont {
  display: flex;
  width: 100%;
  justify-content: space-between;
  align-items: center;
  flex-shrink: 1;
  gap: 2rem;
  overflow: hidden;
  -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 98%, rgba(0, 0, 0, 0) 101%);
  mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 98%, rgba(0, 0, 0, 0) 101%);
  container-name: info;
  container-type: inline-size;
}

.main-info-cont {
  display: flex;
  flex: 3 0 0%;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  width: 100%;
  min-width: 22vi;
  overflow: hidden;
  -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 96%, rgba(0, 0, 0, 0));
  mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 96%, rgba(0, 0, 0, 0));
}

.main-info-cont span, div.lg-meta-cont span {
  margin-left: 0.25rem;
  margin-right: 0.25rem;
  white-space: nowrap;
}

div.meta-cont {
  font-size: small;
  opacity: var(--lp-text-op-2);
}

div.lg-meta-cont {
  display: none;
  flex: 2 0 0%;
  align-items: center;
  justify-content: flex-start;
  font-size: medium;
  opacity: var(--lp-text-op-2);
}

div.lg-meta-cont > div {
  height: fit-content;
}

div.lg-meta-cont > div.meta-artist {
  width: 18vi;
  overflow: hidden;
  -webkit-mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 96%, rgba(0, 0, 0, 0) 101%);
  mask-image: linear-gradient(to right, rgba(0, 0, 0, 1), rgba(0, 0, 0, 1) 96%, rgba(0, 0, 0, 0) 101%);
}

div.lg-meta-cont > div.meta-album {
  width: 18vi;
  overflow: hidden;
}

/* THIS IS IMPORTANT!!!
This allows the list columns (title, artist, and album) 
to adjust width according to parent container width.
A fixed width is necessary to force flex container not to 
move the left edges of the individual 'cells'. Percent 
doesnt work but relative units do. However, we need the
relative units to change according to parent container size
instead of viewport. Fallbacks are implemented above this 
block */
@container info (min-width: 20px) {
  .main-info-cont {
    min-width: 28cqw!important;
  }
  div.lg-meta-cont > div.meta-artist {
    width: 26cqw;
  }

  div.lg-meta-cont > div.meta-album {
    width: 26cqw;
  }
}

div.duration-cont {
  display: flex;
  justify-content: flex-end;
  width: 5.3rem;
  margin-right: 0.6rem;
}

div.meta-artist, div.meta-album, div.meta-cont, div.title-cont {
  display: flex;
  align-items: center;
}
/* ---------------------------- */

/* HEADER --------------------- */

div.lh-children-cont {
  position: absolute;
  width: 100%;
  height: 100%;
}



div.controller-panel {
  --tw-backdrop-blur: blur(24px);
  backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
  background-color: rgb(0 0 0 / 0.1);
  position: absolute;
  bottom: 0px;
  left: auto;
  right: 0px;
  margin: 0.6rem;
  width: fit-content;
  height: fit-content;
  padding: 0.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 0.5rem;
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 700ms;
}

button.mute-btn {
  order: 4;
  margin-right: 0.75rem;
  margin-left: 0.5rem;
}

button.mute-btn > .action-icon {
  width: 1.75rem;
  height: 1.75rem;
}

button.back-btn {
  order: 2;
}

button.forward-btn {
  order: 3;
  margin-right: 0.75rem
}

button.back-btn > .action-icon, button.forward-btn > .action-icon {
  width: 2.25rem;
  height: 2.25rem;
}

button.play-btn {
  order: 1;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

button.play-btn > .action-icon {
  width: 3.5rem;
  height: 3.5rem;
}

div.controller-panel > .btn {
  opacity: 0.75;
}

div.controller-panel > .btn:hover {
  opacity: 1;
}



/* ---------------------------- */

/* INFOCARD ------------------- */
div.lt-info-card {
  display: flex;
  flex-direction: row-reverse;
  justify-content: space-between;
  height: 100%;
  min-height: fit-content;
  padding: 1rem/* 16px */;
  transition: padding 0.3s ease-in-out;
}

div.lt-info-panel {
  flex: 1 1 0%;
  display: flex;
  flex-direction: column;
  width: 100%;
  min-width: 13.9rem/* 222.4px */;
  max-height: 30rem/* 480px */;
  padding-bottom: 5rem/* 80px */;
  padding-left: 0.75rem/* 12px */;
  padding-right: 0.75rem/* 12px */;
  padding-top: 0.5rem/* 8px */;
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 500ms;
  animation: fadeIn 0.6s ease-in-out;
}

/* div.lt-info-title {

} */

h1.lt-info-title-h1 {
  font-size: 2rem;
}

div.lt-info-stats {
  display: flex;
  flex-wrap: nowrap;
  gap: 0.25rem;
}

div.lt-info-stats > span, h1.lt-info-title-h1 > span {
  white-space: nowrap;
}

.lt-info-stats .text.pure {
  font-size: large;
  font-weight: 600;
  opacity: var(--lp-text-op-2);
}

div.lh-listinfocard-cont {
  padding: 0.64rem;
  container-type: size;
}

.lt-info-title h1, .lt-info-panel .lt-info-stats span.text.pure, .lt-info-panel .lt-info-stats span.text.number, .lt-info-panel .lt-info-stats span.cdot {
  transition: all 0.2s linear;
}

@container (max-height: 144px) and (max-width: 480px) {
  .lt-info-panel {
    opacity: 0;
  }
}

@container (min-height: 94px) and (max-height: 130px) {
  .lt-info-title h1 {
    font-size: x-large;
  }
  .lt-info-panel .lt-info-stats span.text.pure, .lt-info-panel .lt-info-stats span.text.number, .lt-info-panel .lt-info-stats span.cdot {
    font-size: small;
  }
}

@container (max-height: 192px) and (min-height: 130px) {
  .lt-info-title h1 {
    font-size: x-large;
  }
  .lt-info-panel .lt-info-stats span.text.pure, .lt-info-panel .lt-info-stats span.text.number, .lt-info-panel .lt-info-stats span.cdot {
    font-size: small;
  }
}

@container (max-width: 550px) {
  .lt-info-title h1 {
    font-size: x-large;
  }
  .lt-info-panel .lt-info-stats span.text.pure, .lt-info-panel .lt-info-stats span.text.number, .lt-info-panel .lt-info-stats span.cdot {
    font-size: small;
  }
}

@container (max-width: 550px) and (max-height: 200px) {
  .lt-info-title h1 {
    font-size: x-large;
  }
  .lt-info-panel .lt-info-stats span.text.pure, .lt-info-panel .lt-info-stats span.text.number, .lt-info-panel .lt-info-stats span.cdot {
    font-size: small;
  }
  div.lt-info-card {
    padding: 0;
  }
}

@container (max-width: 354px) {
  .lt-info-title h1 {
    font-size: large;
  }
  .lt-info-panel .lt-info-stats span.text.pure, .lt-info-panel .lt-info-stats span.text.number, .lt-info-panel .lt-info-stats span.cdot {
    font-size: xx-small;
  }
  div.lt-info-card {
    padding: 0;
  }
}

@container (max-height: 134px) or (max-width: 100px) {
  div.lt-info-card {
    padding: 0;
  }
}

@container (max-height: 94px) {
  .lt-info-title h1 {
    line-height: 140%;
    font-size: large;
  }
  .lt-info-panel .lt-info-stats span.text.pure, .lt-info-panel .lt-info-stats span.text.number, .lt-info-panel .lt-info-stats span.cdot {
    font-size: xx-small;
  }
  div.lt-info-card {
    padding: 0;
  }
}


/* BADGES ----------------------*/
span.badge {
  font-size: xx-small;
}

span.new {
  color: rgba(161, 204, 165, 0.8);
  padding: 0px 3px 0px 3px;
  border-radius: 2px;
  border: 2px solid rgba(161, 204, 165, 0.8);
}

span.explicit {
  color: rgba(255, 255, 255, 0.7);
  padding: 0px 3px 0px 3px;
  border-radius: 2px;
  border: 2px solid rgba(255, 255, 255, 0.7);
}
/* ---------------------------- */


@container list (min-width: 700px){
  div.lg-meta-cont {
      display: flex;
  }
  div.meta-cont {
      display: none!important;
  }
}

@media (prefers-color-scheme: dark) {
  div.track:hover, div.track.selected {
    background-color: rgba(0, 0, 0, 0.10);
  }
}

div.lt-info-img-cont {
  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  height: fit-content;
  max-height: 100%;
  border-radius: 0.5rem;
  aspect-ratio: 1 / 1;
  overflow: hidden;
}

img.lt-info-img {
  height: 100%;
  width: 14rem;
  object-fit: cover;
}

div.lt-info-art-placeholder-cont {
  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
  --tw-border-opacity: 1;
  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
  height: fit-content;
  max-height: 100%;
  border-color: rgb(209 213 219 / var(--tw-border-opacity));
  border-radius: 0.5rem;
  border-width: 2px;
  aspect-ratio: 1 / 1;
  overflow: hidden;
  opacity: 0.8;
}

div.lt-info-placeholder {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 14rem;
  max-width: 100%;
  text-align: center;
  font-size: 1.875rem;
  line-height: 2.25rem;
  padding: 1rem;
  container-name: art;
  container-type: inline-size;
}

div.lt-info-placeholder > span {
  font-size: 3.5rem;
  transition: font-size 0.2s linear;
}

@container art (max-width: 60px) {
  div.lt-info-placeholder > span {
    font-size: 2rem;
  }
}

